--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "react-scrollable-anchor": "^0.6.1",
+    "react-sticky": "^6.0.1",
     "react-syntax-highlighter": "^7.0.0",
     "styled-components": "^3.1.6",
     "web3": "^1.0.0-beta.27"
