--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-sticky": "^6.0.1",
     "react-syntax-highlighter": "^7.0.0",
     "styled-components": "^3.1.6",
+    "sybil": "0.0.6",
     "uuid": "^3.2.1",
     "web3": "^1.0.0-beta.27"
   },
