preparing for release

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ipfs": "^0.28.0",
     "ipfs-api": "^17.5.0",
     "ipfs-pubsub-room": "^1.1.5",
+    "is-mobile": "^0.2.2",
     "js-ipfs": "0.0.301",
     "moment": "^2.21.0",
     "react": "^16.2.0",
@@ -18,10 +19,11 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "react-scrollable-anchor": "^0.6.1",
+    "react-spinners": "^0.3.1",
     "react-sticky": "^6.0.1",
     "react-syntax-highlighter": "^7.0.0",
     "styled-components": "^3.1.6",
-    "sybil": "0.0.6",
+    "sybil": "0.0.13",
     "uuid": "^3.2.1",
     "web3": "^1.0.0-beta.27"
   },
