--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-sticky": "^6.0.1",
     "react-syntax-highlighter": "^7.0.0",
     "styled-components": "^3.1.6",
-    "sybil": "0.0.13",
+    "sybil": "0.0.15",
     "uuid": "^3.2.1",
     "web3": "^1.0.0-beta.27"
   },
@@ -34,6 +34,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "gh-pages": "^1.1.0"
+    "gh-pages": "^1.1.0",
+    "react-scripts-plugin-no-minify": "^0.3.2",
+    "uglifyjs-webpack-plugin": "^1.2.4"
   }
 }
